--- a/public/404.html
+++ b/public/404.html
@@ -3,13 +3,7 @@
 <head>
   <title>The page you were looking for doesn't exist (404)</title>
   <style type="text/css">
-    @font-face {
-      font-family: "LeagueGothic";
-      font-weight: 400;
-      font-style: normal;
-      src: url("http://www.fameandpartners.com/fonts/leaguegothic-regular.eot");
-      src: url("http://www.fameandpartners.com/fonts/leaguegothic-regular.eot?#iefix") format("embedded-opentype"), url("http://www.fameandpartners.com/fonts/leaguegothic-regular.woff") format("woff"), url("http://www.fameandpartners.com/fonts/leaguegothic-regular.ttf") format("truetype"), url("http://www.fameandpartners.com/fonts/leaguegothic-regular.svg#LeagueGothic") format("svg");
-    }
+    @import url(//fonts.googleapis.com/css?family=Forum);
 
     body { background-color: #fff; color: #333; text-align: center; font-family: arial, sans-serif; font-size: 14px; }
     a{
@@ -19,7 +13,7 @@
       padding: 10px 0 20px;
     }
     .logo img{
-      width: 180px;
+      width: 360px;
     }
 
     .dialog {
@@ -27,7 +21,7 @@
       padding: 0 4em;
       margin: 4em auto 0 auto;
     }
-    h1 { font-family: LeagueGothic; font-size: 38px; line-height: 0.9em; text-transform: uppercase; color: #000;}
+    h1 { font-family: 'Forum'; font-size: 33px; line-height: 0.9em; font-weight:600; text-transform: uppercase; color: #000;}
   </style>
 </head>
 
@@ -35,7 +29,7 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div class="logo">
-      <img src="http://www.fameandpartners.com/images/logo-new.png"/>
+      <img src="http://www.fameandpartners.com/assets/new-logo.svg"/>
     </div>
     <h1>So sorry we can't find that page.</h1>
     <p>In the meantime, here is a $20 voucher to make up for your time - just use this code <strong>@checkout: OOPS20</strong></p>
