--- a/public/500.html
+++ b/public/500.html
@@ -51,6 +51,9 @@
       <a href="http://www.fameandpartners.com/?cf=404">Go to the homepage</a>
     </p>
   </div>
+  <div style="display:none;">
+    ::CLOUDFLARE_ERROR_500S_BOX::
+  </div>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
