Pay button and credit card expiry date

--- a/spec/selenium_checkout_test.html
+++ b/spec/selenium_checkout_test.html
@@ -103,8 +103,18 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//input[@name='pay_securely']</td>
+	<td>//button[@name='pay_securely']</td>
 	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=year</td>
+	<td>2018</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=month</td>
+	<td>08</td>
 </tr>
 <tr>
 	<td>type</td>
